--- a/Admin-Portal/src/components/PatientDetails/PatientDetails.scss
+++ b/Admin-Portal/src/components/PatientDetails/PatientDetails.scss
@@ -1,48 +1,66 @@
+// PatientDetails.scss
 .patient-details {
-    // Adjust styling according to your layout and requirements
-    .search-container {
-      margin-bottom: 20px;
-      margin-top: 10PX;
-      input[type='text'] {
-        margin-left: 10px;
-        width: calc(50% - 40px); // Adjust width to accommodate search icon button
-        padding: 10px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        font-size: 16px;
-        transition: border-color 0.3s ease;
-  
-        &:focus {
-          outline: none;
-          border-color: var(--primary-color);
-        }
-      }
-  
-      // Style your search icon button here if needed
-    }
-  
-    .patient-table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-bottom: 20px;
-  
-      th,
-      td {
-        border: 1px solid #ccc;
-        padding: 10px;
-      }
-  
-      th {
-        background-color: #f2f2f2;
-        font-weight: bold;
-        text-align: left;
-      }
-  
-      td {
-        text-align: left;
+  // Adjust styling according to your layout and requirements
+  .search-container {
+    margin-bottom: 20px;
+    margin-top: 10px;
+    input[type='text'] {
+      margin-left: 10px;
+      width: calc(50% - 40px); // Adjust width to accommodate search icon button
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      font-size: 16px;
+      transition: border-color 0.3s ease;
+
+      &:focus {
+        outline: none;
+        border-color: var(--primary-color);
       }
     }
-  
-    // Add more styles as needed for other elements on the patient details page
+
+    // Style your search icon button here if needed
   }
-  
+
+  .patient-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 20px;
+
+    th,
+    td {
+      border: 1px solid #ccc;
+      padding: 10px;
+    }
+
+    th {
+      background-color: #f2f2f2;
+      font-weight: bold;
+      text-align: left;
+    }
+
+    td {
+      text-align: left;
+    }
+
+    // Styling for the view button
+    .view-button {
+      width: 50%;
+      padding: 8px 12px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+      background-color: #007bff;
+      color: #fff;
+      margin-right: 2px;
+      margin-left: 40px;
+
+      &:hover {
+        background-color: #0056b3;
+      }
+    }
+  }
+
+  // Add more styles as needed for other elements on the patient details page
+}
