--- a/Admin-Portal/src/components/AddDoctor/AddDoctor.scss
+++ b/Admin-Portal/src/components/AddDoctor/AddDoctor.scss
@@ -1,74 +1,88 @@
 .add-doctor-container {
-    display: flex;
+  display: flex;
+}
+
+.form-container {
+  flex: 1;
+  padding: 20px;
+  font-family: Arial, sans-serif;
+
+  h2 {
+    font-size: 20px;
+    margin-bottom: 20px;
   }
-  
-  .form-container {
-    flex: 1;
-    padding: 20px;
-    font-family: Arial, sans-serif;
-  
-    h2 {
-      font-size: 20px;
-      margin-bottom: 20px;
+
+  .input-fields {
+    margin-bottom: 20px;
+
+    input, select {
+      width: 100%;
+      margin-bottom: 10px;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      font-size: 16px;
+      transition: border-color 0.3s ease;
+
+      &:focus {
+        outline: none;
+        border-color: #007bff;
+      }
     }
-  
-    .input-fields {
-      margin-bottom: 20px;
-  
-      input {
-        width: 100%;
-        margin-bottom: 10px;
-        padding: 10px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        font-size: 16px;
-        transition: border-color 0.3s ease;
-  
-        &:focus {
-          outline: none;
-          border-color: #007bff;
-        }
-      }
-  
-      .add-doctor-btn,
-      .close-btn {
-        width: calc(50% - 5px);
-        padding: 10px;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
-      }
-  
-      .add-doctor-btn {
-        background-color: #007bff;
-        color: #fff;
-  
-        &:hover {
-          background-color: #0056b3;
-        }
-      }
-  
-      .close-btn {
-        background-color: #ccc;
-        color: #000;
-  
-        &:hover {
-          background-color: #b3b3b3;
+
+    .senior-doctor-toggle {
+      margin-top: 10px;
+      margin-left: -50px;
+
+      label {
+        display: inline-flex;
+        align-items: center;
+        margin-right: 20px;
+
+        input {
+          margin-right: -50px;
         }
       }
     }
   }
-  
-  .image-container {
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  
-    img {
-      max-width: 100%;
-      max-height: 100%;
+
+  .add-doctor-btn,
+  .close-btn {
+    width: calc(50% - 5px);
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+
+  .add-doctor-btn {
+    background-color: #007bff;
+    color: #fff;
+
+    &:hover {
+      background-color: #0056b3;
     }
   }
-  
+
+  .close-btn {
+    background-color: #ccc;
+    color: #000;
+
+    &:hover {
+      background-color: #b3b3b3;
+    }
+  }
+}
+
+.image-container {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  img {
+    max-width: 100%;
+    max-height: 100%;
+  }
+}
